@@ -2938,6 +2938,159 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testMultiContentStreamRequest
+specifier|public
+name|void
+name|testMultiContentStreamRequest
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrServer
+name|server
+init|=
+name|getSolrServer
+argument_list|()
+decl_stmt|;
+name|server
+operator|.
+name|deleteByQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+expr_stmt|;
+comment|// delete everything!
+name|server
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|QueryResponse
+name|rsp
+init|=
+name|server
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ContentStreamUpdateRequest
+name|up
+init|=
+operator|new
+name|ContentStreamUpdateRequest
+argument_list|(
+literal|"/update"
+argument_list|)
+decl_stmt|;
+name|up
+operator|.
+name|addFile
+argument_list|(
+name|getFile
+argument_list|(
+literal|"docs1.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// 2
+name|up
+operator|.
+name|addFile
+argument_list|(
+name|getFile
+argument_list|(
+literal|"docs2.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// 3
+name|up
+operator|.
+name|setAction
+argument_list|(
+name|AbstractUpdateRequest
+operator|.
+name|ACTION
+operator|.
+name|COMMIT
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|result
+init|=
+name|server
+operator|.
+name|request
+argument_list|(
+name|up
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"Couldn't upload xml files"
+argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|=
+name|server
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|assertNumFound
 specifier|protected
 name|void
